<resources>
    <string name="app_name">Registration</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="editCommand">Click Here To Edit This Record</string>
    <string name="deleteCommand">Click Here to Delete This Record</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="id">Id No.</string>
    <string name="age">Age</string>
    <string name="name_of_doctor">Name of Doctor</string>
    <string name="description">Description</string>
    <string name="displayInfo">Get Data</string>
    <string name="date">date</string>
    <string name="enter_name_here">name</string>

</resources>
