<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".createPDF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:contentDescription="logo"
        tools:srcCompat="@drawable/emtech" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="5dp">

        <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/age" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/doctorName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/name_of_doctor" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

    </LinearLayout>

</LinearLayout>