<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/textbackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#3C3F41"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout


        android:id="@+id/imgview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textbackground"
        android:padding="30dp"
        android:elevation="30dp"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/age" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/doctorName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/name_of_doctor" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />


    </LinearLayout>
</LinearLayout>

